# mimicry

./: CMakeLists.txt  README.md
src/: diff.cpp  diff.h  ds.cpp  ds.h  mimicry.cpp  transform.cpp  transform.h  transforms.cpp  transforms.h
